@@ -12,6 +12,7 @@ Version 1.0 - 2012-06-XX
  * Only open browser on left-click of cover art box (PICARD-190)
  * Fix Lookup in Browser (previously 'tag lookup') for clusters (PICARD-186)
  * Lookup in Browser will now not use MBIDs to lookup unmatched files/clusters
+ * Add Date/Country to CD Lookup results deialog (PICARD-198)
 
 Version 0.16 - 2011-10-23
  * Added AcoustID support.
